deuxieme commit de cvOneligne

--- a/myCvOneligne.html
+++ b/myCvOneligne.html
@@ -13,8 +13,8 @@
 		<div class="sousConteneur1">
 		    <div class="cont1"><a href="photo.JPG"><img src="photo.JPG" alt=""></a></div>
 		    <p class="contact">
-		        <div class="cont1"><h1>SAMAKE Kadidiatou</h1>
-		         	<p>Actuellement en formation intensive de six mois à Orange Digital Kalanso (ODK), j'ai étudié à l'école nationale d'ingénieur de Bamako là où j'ai obtenue une licence en Génie Informatique et Télécoms. J'ai eu à effectuer un stage de trois mois à Loginéo en Développement Web. Aussi je travaille egalement chez iDansé SARL pour la gestion des commandes des billets de voyage.
+		        <div class="cont1">
+		         	<p><strong style="font-size: 50px">SAMAKE Kadidiatou</strong><br><strong style="font-size: 20px">Développeuse Web</strong><br>Actuellement en formation intensive de six mois à Orange Digital Kalanso (ODK), j'ai étudié à l'école nationale d'ingénieur de Bamako là où j'ai obtenue une licence en<br> Génie Informatique et Télécoms. J'ai eu à effectuer un stage de trois mois à Loginéo en Développement Web. Aussi je travaille egalement chez iDansé SARL pour la<br> gestion des commandes des billets de voyage.
 		            </p>
 		        </div>
 		    </p>
@@ -40,7 +40,7 @@
 						<li>Esprit d'équipe</li>
 						<li>Créative</li>
 					</ul>
-					<h4>| LOISIRS</h4>
+					<h4>| LANGUES</h4>
 					<ul class="color">
 					<li>Français: Courant</li>
 					<li>Anglais: Courant</li>
