--- a/myCvOneligne.html
+++ b/myCvOneligne.html
@@ -9,22 +9,22 @@
 	<link rel="stylesheet" type="text/css" href="myStyleOFcv.css">
 </head>
 <body>
-	<main class="conteneur">
+	<main class="conteneur" style=" margin: 0 auto; width: 75%; ">
 		<div class="sousConteneur1">
 		    <div class="cont1"><a href="photo.JPG"><img src="photo.JPG" alt=""></a></div>
 		    <p class="contact">
 		        <div class="cont1">
-		         	<p><strong style="font-size: 50px">SAMAKE Kadidiatou</strong><br><strong style="font-size: 20px">Développeuse Web</strong><br>Actuellement en formation intensive de six mois à Orange Digital Kalanso (ODK), j'ai étudié à l'école nationale d'ingénieur de Bamako là où j'ai obtenue une licence en<br> Génie Informatique et Télécoms. J'ai eu à effectuer un stage de trois mois à Loginéo en Développement Web. Aussi je travaille egalement chez iDansé SARL pour la<br> gestion des commandes des billets de voyage.
+		         	<p><strong style="font-size: 50px">SAMAKE Kadidiatou</strong><br><strong style="font-size: 20px">Développeur Web</strong><br>Actuellement en formation intensive de six mois à Orange Digital Kalanso (ODK), j'ai étudié à l'école nationale d'ingénieur de Bamako là où j'ai obtenue une licence en<br> Génie Informatique et Télécoms. J'ai eu à effectuer un stage de trois mois à Loginéo en Développement Web. Aussi je travaille egalement chez iDansé SARL pour la<br> gestion des commandes des billets de voyage.
 		            </p>
 		        </div>
 		    </p>
 		</div>
 		<div class="sousConteneur2">
-				<ul class="color">
-					<i class="fa fa-phone" aria-hidden="true">  +223 74 62 97 47</i><br><br>
-					<i class="fa fa-envelope" aria-hidden="true">  ksamake18@gmail.com</i><br><br>
-					<i class="fa fa-map-marker" aria-hidden="true">  Bamako, Mali</i><br><br>
-				</ul>
+				<div class="color">
+					<br><i class="fa fa-phone" aria-hidden="true">+223 74 62 97 47</i><br><br>
+					<i class="fa fa-envelope" aria-hidden="true"> ksamake18@gmail.com</i><br><br>
+					<i class="fa fa-map-marker" aria-hidden="true"> Bamako, Mali</i><br><br>
+				</div>
 				<h4 >|   COMPETENCES</h4>
 				<h4 >  Professionnelles</h4>
 					<ul class="color">
@@ -48,23 +48,23 @@
 					</ul>
 		</div>
 		<div class="sousConteneur3">
-			<h2 class="c1"> | EXPERIENCE PROFESIONNELLE</h2>
-			<p class="c1"><strong> iDansé SARL | Gestion des commandes en ligne</strong>
+			<h2 class="c1"> | EXPERIENCES PROFESIONNELLE</h2>
+			<p class="c1"><b> iDansé SARL | Gestion des commandes en ligne</b>
             <br> 09/03/2021 - 21/06/2022<br> Travaille chez Idansé SARL pour la gestion des billets <br>de voyage reserver
             </p>
 			
-			<p  class="c1"><strong> Loginéo | Stagiaire en Développement Web</strong>
+			<p  class="c1"><b> Loginéo | Stagiaire en Développement Web</b>
                <br> 01/11/2020 - 03/01/2021<br> Stagiaire pendant trois mois en développement Web à<br> Loginéo J'ai eu à développer un site Ecommerce avec<br> le CMS WordPress
 			</p>
-			<p class="c1"><strong> DoumTech | Technicien de l'Intallation des Antennes parabolles</strong>
+			<p class="c1"><b> DoumTech | Technicienne de l'Intallation des Antennes parabolles</b>
                <br> 18/03/2018 - 24/12/2019<br> Technicienne en installation et maintenance des antennes <br> parabolles chez DoumTech, j'ai eu à configure les antennes <br> paraboles sur différent satellite
 			</p>
 			<h2  class="c1"> | FORMATIONS</h2>
-            <p  class="c1"><strong> Licence en Génie Informatique et Télecoms /Ecole Nationnal d'Ingénieur de Bamako</strong><br><strong>2017-2021      </strong><br>Formation Académique basée sur les specialitées Informatique et Télécoms, j'ai obtenue <br>ma licence avec une mention ASSEZ-BIEN
+            <p  class="c1"><b> Licence en Génie Informatique et Télecoms /Ecole Nationnal d'Ingénieur de Bamako</b><br><b>2017-2021</b><br>Formation Académique basée sur les specialitées Informatique et Télécoms, j'ai obtenue <br>ma licence avec une mention ASSEZ-BIEN
             </p>
 
-            <p  class="c1"><strong>  Baccalauréat Malien en Science
-            Excat (TSE) / Lycée Beydi Konadji d'Hamdallaye ACI-2000</strong><br><strong> 2015-2017</strong><br>
+            <p  class="c1"><b>  Baccalauréat Malien en Science
+            Excat (TSE) / Lycée Beydi Konadji d'Hamdallaye ACI-2000</b><br><b> 2015-2017</b><br>
             L'objectif principal du était de gagner une belle confiance en soi pour bien préparer mon <br>   orientation future, j'ai atteind cet objectif avec succès en décrochant mon bac avec une <br>   mention Assez-Bien
 			</p>
 		</div>
